<resources>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_add_money">Add £10</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_address_error">Please enter a correct email address</string>
    <string name="password_error">Please enter a correct password</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="input_valid">Input is valid!</string>
    <!--    Lottie files-->
    <string name="lottie_owl_coin_shower">owl_coin_shower.json</string>

    <string name="error_empty_email">Email is empty</string>
    <string name="error_required_field">Required field</string>
    <string name="error_password_short">The password must be at least 8 characters in length</string>
    <string name="error_password_need_lower_letter">The password must have at least 1 lower letter</string>
    <string name="error_password_need_upper_letter">The password must have at least 1 upper letter</string>
    <string name="error_password_need_upper_digit">The password must have at least 1 digit</string>
    <string name="error_message_unexpected_error">Unexpected error occurred</string>
    <string name="error_message_wrong_credentials">Entered credentials are wrong</string>
    <string name="error_message_unexpected_server_error">Unexpected server error occurred.</string>
    <string name="error_message_bad_request">Bad request.</string>
    <string name="error_message_internal_server_error">Internal server error occurred.</string>
    <string name="error_empty_password">Password is empty</string>
    <string name="error_message_session_expired">Your session has been expired. Please log in again.</string>
    <string name="message_internet_error">Internet connection appears to be offline</string>

    <string name="text_greeting">Hello,</string>
    <string name="text_total_plan_value">Your plan value is</string>
    <string name="title_login_screen">Log in</string>
    <string name="title_user_accounts_screen">User Accounts</string>
    <string name="title_individual_account_screen">Individual Account</string>
    <string name="text_pound_value">£%.2f</string>
    <string name="label_plan_value">Plan Value:</string>
    <string name="label_moneybox">Moneybox:</string>
    <string name="message_payment_success">Payment successful</string>

</resources>
