<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.minimoneybox.ui.cutomview.ToolbarDefault
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <TextView
        android:id="@+id/tvAccountName"
        style="@style/TextView.CardViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:text="General investment account" />

    <TextView
        android:id="@+id/lbPlanValue"
        style="@style/TextView.CardViewBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/label_plan_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountName" />


    <TextView
        android:id="@+id/tvPlanValue"
        style="@style/TextView.CardViewSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="@+id/lbPlanValue"
        app:layout_constraintStart_toEndOf="@+id/lbPlanValue"
        app:layout_constraintTop_toTopOf="@+id/lbPlanValue"
        app:layout_constraintVertical_bias="0.0"
        tools:text="£1700" />

    <TextView
        android:id="@+id/lbMoneybox"
        style="@style/TextView.CardViewBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/label_moneybox"
        app:layout_constraintStart_toStartOf="@+id/lbPlanValue"
        app:layout_constraintTop_toBottomOf="@+id/lbPlanValue" />

    <TextView
        android:id="@+id/tvMoneybox"
        style="@style/TextView.CardViewSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="@+id/lbMoneybox"
        app:layout_constraintStart_toEndOf="@+id/lbMoneybox"
        app:layout_constraintTop_toTopOf="@+id/lbMoneybox"
        tools:text="£40" />

    <Button
        android:id="@+id/btnAddMoney"
        style="@style/Widget.Button.Colored.Rounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/action_add_money"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbMoneybox" />

    <include layout="@layout/partial_progress" />


</androidx.constraintlayout.widget.ConstraintLayout>